examples/errors/lvalue/read.xana
def main() do
    a :: int

    in a + 1 # Lvalue required
end
